Bug 422383 - Bluetooth KCM adding every device as known after search
Summary: Bluetooth KCM adding every device as known after search
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_bluetooth (other bugs)
Version First Reported In: 5.18.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords: usability
: 414969 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-02 17:59 UTC by gudvinr+kde
Modified: 2024-08-05 12:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gudvinr+kde 2020-06-02 17:59:55 UTC
SUMMARY

If you try to search for device to pair a new one then you will bloat your known device list with unwanted devices (e.g. neighbour's TV, temperature sensors, etc).

It means whenever you need to add a new device you then should to clean up your list from garbage that wasn't added manually.

This wasn't there before and probably was introduced somewhere in 5.17 or maybe earlier.


STEPS TO REPRODUCE
1. Go to System Settings > Bluetooth
2. Press "+" in device window
3. Wait for scan to complete (or at least show any device)
4. Press "Cancel" or Pair with device

OBSERVED RESULT
There are many unwanted results in "Devices" list.

EXPECTED RESULT
Not having devices that you didn't pair with in "Devices" list.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Kernel Version: 5.4.43-1-lts
OS Type: 64-bit
Comment 1 Bug Janitor Service 2020-12-06 15:39:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/26
Comment 2 Nicolas Fella 2020-12-07 19:37:32 UTC
Git commit b4ba0dae5c4f3a15c180b35aa5f96263b7843c2a by Nicolas Fella.
Committed on 07/12/2020 at 19:37.
Pushed by nicolasfella into branch 'master'.

Show only paired devices in KCM and applet

Currently only paired/known devices are shown initially. Once the user starts the
wizard we enter discover mode and all newly found devices are added to
the model and thus the applet and KCM. When the KCM is closed and opened
again only the paired devices.

To avoid this filter out unpaired devices in the ProxyModel that is used
by the applet and KCM.
Related: bug 416322

M  +6    -0    src/applet/plugin/devicesproxymodel.cpp
M  +1    -0    src/applet/plugin/devicesproxymodel.h

https://invent.kde.org/plasma/bluedevil/commit/b4ba0dae5c4f3a15c180b35aa5f96263b7843c2a
Comment 3 Nicolas Fella 2020-12-07 19:39:20 UTC
Git commit de1681fbe2ed6ca502c72c2fe78bcd3df91ca332 by Nicolas Fella.
Committed on 07/12/2020 at 19:38.
Pushed by nicolasfella into branch 'Plasma/5.20'.

Show only paired devices in KCM and applet

Currently only paired/known devices are shown initially. Once the user starts the
wizard we enter discover mode and all newly found devices are added to
the model and thus the applet and KCM. When the KCM is closed and opened
again only the paired devices.

To avoid this filter out unpaired devices in the ProxyModel that is used
by the applet and KCM.
Related: bug 416322
(cherry picked from commit b4ba0dae5c4f3a15c180b35aa5f96263b7843c2a)

M  +6    -0    src/applet/plugin/devicesproxymodel.cpp
M  +1    -0    src/applet/plugin/devicesproxymodel.h

https://invent.kde.org/plasma/bluedevil/commit/de1681fbe2ed6ca502c72c2fe78bcd3df91ca332
Comment 4 ratijas 2024-08-05 12:27:06 UTC
*** Bug 414969 has been marked as a duplicate of this bug. ***